style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Montserrat',sans-serif;
    font-weight: 600;
    line-height: 1.6;
    background-color: #8d89a6;
    color: black;
}

a {
    text-decoration: none;
    color: #ccc;
}

ul {
    list-style: none;
}

li {
    margin-bottom: 10px;
}

.container {
    background-color: #f8fafe;
    max-width: 1100px;
   
    border-radius: 10px;
    margin: 0 auto;
    margin-top: 120px;
    padding: 50px 40px;
}

.pricing-section {
    display: flex;
    gap:50px;
    justify-content: space-around;
    flex-wrap: wrap;
}

.pricing-card {
   text-align: center;
    padding: 20px;
    flex: 1;
    border-radius: 8px;
    margin-bottom: 30px;
      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    
    
}
 .starter {
    background-color: #f2d5f8;

   
 
 }
 .pro {
    background-color: #e6c0e9;
 
 
 }
 .corporate {
    background-color: #bfabcb;
  
   
 }

 .pricing-card h2 {
    font-size: 18px;
    text-transform: uppercase;
    margin-bottom: 10px;
    padding: 15px;
    color: #333;
 }

 .btn {
    display: block;
    padding: 20px;
    color: aliceblue;
    background-color: rgb(75, 36, 63);
    border: 1px solid #37364b;
    border-radius: 5px;
    width: 100%;
    padding: 15px;
    font-size: 16px;
    
 }

 .pricing-card ul {
    text-align: center;
 }

.btn:hover {
    background-color: #bb6a90;
}

.price sup {
    font-size: 24px;
    position: relative;
    left: -5px;
}

.price span {
    font-size: 18px;
    margin-left: 5px;
}

